--- a/views/group/userlist.ejs
+++ b/views/group/userlist.ejs
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-condensed">
+<table class="table" style="font-size:12px">
   <tr>
     <th><%= msg('uid') %></th>
     <th><%= msg('username') %></th>
