--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,16 @@
-<form class="form-horizontal" method="post">
+<form class="horizontal" method="post">
   <fieldset>
     <legend><%- msg('Login') %></legend>
-    <div class="control-group">
-      <label class="control-label" for="username"><%- msg('Username') %></label>
+    <div class="field">
+      <label for="username"><%- msg('Username') %></label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="username" name="username">
+        <input type="text" class="text" id="username" name="username">
       </div>
     </div>
-    <div class="control-group">
-      <label class="control-label" for="password"><%- msg('Password') %></label>
+    <div class="field">
+      <label for="password"><%- msg('Password') %></label>
       <div class="controls">
-        <input type="password" class="input-xlarge" id="password" name="password">
+        <input type="password" class="text" id="password" name="password">
       </div>
     </div>
     <div class="form-actions">
