--- a/views/appedit.ejs
+++ b/views/appedit.ejs
@@ -1,27 +1,27 @@
-<form class="form-horizontal" method="post">
+<form class="horizontal" method="post">
   <fieldset>
     <legend><%= title %></legend>
-    <div class="control-group">
-      <label class="control-label" for="clientid"><%- msg('client-id') %></label>
+    <div class="field">
+      <label for="clientid"><%- msg('client-id') %></label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="clientid" readonly="readonly" value="<%= appinfo.clientid %>">
+        <input type="text" class="text" id="clientid" readonly="readonly" value="<%= appinfo.clientid %>">
       </div>
     </div>
-    <div class="control-group">
-      <label class="control-label" for="app-name"><%- msg('app-name') %></label>
+    <div class="field">
+      <label for="app-name"><%- msg('app-name') %></label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="app-name" name="name" value="<%= appinfo.name %>">
+        <input type="text" class="text" id="app-name" name="name" value="<%= appinfo.name %>">
         <p class="help-block"><%- msg('appreg-name-tips') %></p>
       </div>
     </div>
-    <div class="control-group">
-      <label class="control-label" for="app-desc"><%- msg('app-desc') %></label>
+    <div class="field">
+      <label for="app-desc"><%- msg('app-desc') %></label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="app-desc" name="desc" value="<%= appinfo.desc %>">
+        <input type="text" class="text" id="app-desc" name="desc" value="<%= appinfo.desc %>">
       </div>
     </div>
     <div class="form-actions">
-      <button type="submit" class="btn btn-primary"><%- msg('Submit') %></button>
+      <button type="submit" class="btn"><%- msg('Submit') %></button>
       <a href="/" class="btn"><%- msg('Cancel') %></a>
     </div>
   </fieldset>
