--- a/views/group/adduser.ejs
+++ b/views/group/adduser.ejs
@@ -1,16 +1,16 @@
-<form class="form-horizontal" method="post">
+<form class="horizontal" method="post">
   <fieldset>
     <legend><%= title %></legend>
-    <div class="control-group">
+    <div class="field">
       <label class="control-label" for="name"><%- msg('username') %></label>
       <div class="controls">
-        <input type="text" class="input-medium" id="name" name="name">
+        <input type="text" class="text" id="name" name="name">
       </div>
     </div>
-    <div class="control-group">
+    <div class="field">
       <label class="control-label" for="parent"><%- msg('group') %></label>
       <div class="controls">
-        <input type="text" class="input-medium" id="parent" readonly="readonly" value="<%= group.name %>">
+        <input type="text" class="text" id="parent" readonly="readonly" value="<%= group.name %>">
       </div>
     </div>
     <div class="form-actions">
