--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Accounts9</title>
-    <link rel="shortcut icon" href="favicon.ico">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link href="/css/style.min.css" rel="stylesheet">
     <script>
         (function(d) { d.className = d.className.replace(/(^|\s)no-js(\s|$)/, '$1js$2'); })(document.documentElement);
     </script>
@@ -20,11 +20,11 @@
         <ul id="home-welcome">
             <li>欢迎各位酒井用户来到Accounts9。</li>
             <% if (!curUser) { %>
-              <li><a href="#"><i class="icon-user"></i>注册</a></li>
+              <li><a href="/register"><i class="icon-user"></i>注册</a></li>
             <% } %>
         </ul>
         <% if (!curUser) { %>
-          <form action="#" method="post" id="home-login">
+          <form action="/login" method="post" id="home-login">
               <div><input type="text" name="username" id="home-input-username" placeholder="用户名" autofocus required></div>
               <div><input type="password" name="password" id="home-input-password" placeholder="口令" required></div>
               <div><input type="submit" name="submit" id="home-input-submit" value="登入"></div>
@@ -33,8 +33,8 @@
         <div id="home-footer"><a href="#">THU.DCST.SAST.NET</a> 2012</div>
     </div>
 
-    <script src="js/jquery-1.7.2.min.js"></script>
-    <script src="js/jquery.placeholder-enhanced.min.js"></script>
+    <script src="/js/jquery-1.7.2.min.js"></script>
+    <script src="/js/jquery.placeholder-enhanced.min.js"></script>
     <script type="text/javascript">
         $('input[placeholder]').placeholderEnhanced();
     </script>
