--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title><%= title %> - Accounts9</title>
-    <link rel="shortcut icon" href="favicon.ico">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link href="/css/style.min.css" rel="stylesheet">
     <script>
         (function(d) { d.className = d.className.replace(/(^|\s)no-js(\s|$)/, '$1js$2'); })(document.documentElement);
     </script>
@@ -42,8 +42,7 @@
         </div>
         <div id="footer"><a href="#">THU.DCST.SAST.NET</a> 2012</div>
     </div>
-    <script src="js/jquery-1.7.2.min.js"></script>
-    <script src="js/script.js"></script>
-    
+    <script src="/js/jquery-1.7.2.min.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
