Fixed bugs in theme

--- a/front-end/less/_table.less
+++ b/front-end/less/_table.less
@@ -24,4 +24,9 @@ table.table {
         border: 1px solid #EEE;
     }
 
+    &.vertical {
+        th {
+            text-align: right;
+        }
+    }
 }
