--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
               <div><input type="submit" name="submit" id="home-input-submit" value="登入"></div>
           </form>
         <% } %>
-        <div id="home-footer"><a href="#">THU.DCST.SAST.NET</a> 2012</div>
+        <div id="home-footer"><a href="/about">THU.DCST.SAST.NET</a> 2012</div>
     </div>
 
     <script src="/js/jquery-1.7.2.min.js"></script>
