--- a/views/user/user.ejs
+++ b/views/user/user.ejs
@@ -12,7 +12,7 @@
     <%- partial('userinfo') %>
     <% if (curUser && curUser.name == user.name) { %>
       <p>
-        <a href="/dashboard" class="btn">
+        <a href="/dashboard" class="btn top-right">
           <i class="icon-edit icon-white"></i>
           <%= msg('dashboard') %>
         </a>
