Fixed font and other details

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,4 +8,5 @@
   <a href="/u/nuk">Nuk</a>
   <a href="/u/npbool">Npbool</a>
   <a href="/u/liyuliang001">Liyuliang001</a>
+  <a href="/u/brian14708">Brian14708</a>
 </p>
