--- a/views/group/group.ejs
+++ b/views/group/group.ejs
@@ -21,7 +21,7 @@
 <% } %>
 <table class="table vertical">
   <tr>
-    <th><%- msg('group-name') %></th>
+    <th width="200px"><%- msg('group-name') %></th>
     <td><%= group.name %></td>
   </tr>
   <tr>
