--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Accounts9</title>
     <link rel="shortcut icon" href="/favicon.ico">
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
     <link href="/css/style.min.css" rel="stylesheet">
     <script>
         (function(d) { d.className = d.className.replace(/(^|\s)no-js(\s|$)/, '$1js$2'); })(document.documentElement);
@@ -21,6 +22,8 @@
             <li>欢迎各位酒井用户来到Accounts9。</li>
             <% if (!curUser) { %>
               <li><a href="/register"><i class="icon-user"></i>注册</a></li>
+            <% } else {%>
+              <li><a href="/u/<%= curUser.name %>">返回</a></li>
             <% } %>
         </ul>
         <% if (!curUser) { %>
