--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title><%= title %> - Accounts9</title>
     <link rel="shortcut icon" href="/favicon.ico">
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
     <link href="/css/style.min.css" rel="stylesheet">
     <script>
         (function(d) { d.className = d.className.replace(/(^|\s)no-js(\s|$)/, '$1js$2'); })(document.documentElement);
