--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -1,5 +1,5 @@
 <h1><%= msg('dashboard') %></h1>
-<a href="/editinfo" class="btn" style="float:right">
+<a href="/editinfo" class="btn" style="float:right;position:relative;top:10px">
     <i class="icon-edit icon-white"></i>
     <%= msg('edit-userinfo') %>
 </a>
@@ -9,7 +9,7 @@
 </div>
 <hr>
 
-<a href="/appreg" class="btn" style="float:right">
+<a href="/appreg" class="btn" style="float:right;position:relative;top:10px">
   <i class="icon-plus icon-white"></i>
   <%= msg('register-new-app') %>
 </a>
