--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title><%= title %> - Accounts9</title>
     <link rel="shortcut icon" href="/favicon.ico">
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
     <link href="/css/style.min.css" rel="stylesheet">
     <script>
         (function(d) { d.className = d.className.replace(/(^|\s)no-js(\s|$)/, '$1js$2'); })(document.documentElement);
@@ -43,7 +43,8 @@
         </div>
         <div id="footer"><a href="/about">THU.DCST.SAST.NET</a> 2012</div>
     </div>
-    <script src="/js/jquery-1.7.2.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
     <script src="/js/script.js"></script>
 </body>
 </html>
