Fixed groups view

--- a/front-end/less/_form.less
+++ b/front-end/less/_form.less
@@ -79,9 +79,9 @@ form.horizontal {
 
     textarea.text,
     input.text {
-        line-height: 28px;
+        line-height: 20px;
         border: 1px solid #AAA;
-        padding: 0;
+        padding: 4px;
         margin: 0;
         width: 280px;
     }
