--- a/front-end/less/_table.less
+++ b/front-end/less/_table.less
@@ -28,5 +28,9 @@ table.table {
         th {
             text-align: right;
         }
+
+        ul {
+            padding-left: 20px;
+        }
     }
 }
