--- a/views/group/groupnode.ejs
+++ b/views/group/groupnode.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="group-<%= groupnode.name %>">
     <% if (groupnode.children.length > 0) { %>
         <div class="node" title="<%= groupnode.desc %>"><a href="/group/<%= groupnode.name %>" class="btn"><i class="icon-link"></i></a> <%= groupnode.title %></div>
         <ul>
