Added a page for password fetching.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,6 +15,7 @@
     </div>
     <div class="form-actions">
       <button type="submit" class="btn btn-primary"><%- msg('Login') %></button>
+      <a href="/login/fetchpwd" class="btn btn-primary"><%- msg('fetch-password') %></a>
     </div>
   </fieldset>
 <% if (returnto) { %>
