Implemented connecting to net9 BBS.

--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -43,3 +43,15 @@
     <%= msg('error-retrieving-apps') %>
   </p>
 <% } %>
+<hr>
+
+<% if (!bbsUser) { %>
+<a href="/bbs/connect" class="btn" style="float:right;position:relative;top:10px">
+  <i class="icon-plus icon-white"></i>
+  <%= msg('net9-bbs-connect') %>
+</a>
+<% } %>
+<h2><%= msg('net9-bbs') %></h2>
+<% if (bbsUser) { %>
+已绑定酒井帐号：<%= bbsUser.information.userid %>
+<% } %>
