--- a/views/user/userinfo.ejs
+++ b/views/user/userinfo.ejs
@@ -50,7 +50,7 @@
   <tr>
     <th><%= msg('belong-groups') %></th>
     <td>
-      <%- partial('../group/grouplistplain', user.groups) %>
+      <%- partial('../group/grouplistplain', user.directGroups) %>
     </td>
   </tr>
   <tr>
