Add applications navigation

--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -9,6 +9,21 @@
 </div>
 <hr>
 
+<h2>应用</h2>
+<ul>
+  <li><a href="https://wiki.net9.org" target="_blank">Wiki9</a> - 酒井维基</li>
+  <li><a href="http://git.net9.org" target="_blank">Git9</a> - 酒井Git</li>
+  <li><a href="http://ai.net9.org/" target="_blank">AI9</a> - 智能体官方网站</li>
+  <li>
+    <a href="ftp://ftp.net9.org/" target="_blank">FTP9</a> - 酒井文件服务器
+      (<a href="https://wiki.net9.org/w/FTP9" target="_blank">说明</a>)
+  </li>
+  <li>
+    <a href="https://rowell.net9.org/" target="_blank">Rowell</a> - 9#BBS网页版
+      (<a href="https://wiki.net9.org/w/Rowell" target="_blank">说明</a>)
+    </li>
+</ul>
+
 <h2><%= msg('authorized-apps') %></h2>
 <% if (apps.success) { %>
   <% if (apps.authorizedapps.length) { %>
