Use connect-assets

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,7 +9,7 @@
     <title><%= title %> - Accounts9</title>
     <link rel="shortcut icon" href="/favicon.ico">
     <link href='//fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
-    <link href="/css/style.min.css" rel="stylesheet">
+    <%- css('style') %>
     <script>
         (function(d) { d.className = d.className.replace(/(^|\s)no-js(\s|$)/, '$1js$2'); })(document.documentElement);
     </script>
