Modify style of search input

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,7 +25,7 @@
               <% } else { %>
                 <li>
                   <form method="get" action="/search">
-                    <input name="q" id="search"/>
+                    <input name="q" id="search" class="text">
                   </form>
                 </li>
                 <li><a class="btn" href="/u/<%= curUser.name %>"><%= curUser.name %></a></li>
