Update about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,12 +1,14 @@
 <h1>Accounts9</h1>
-<p>欢迎各位酒井用户来到Accounts9。</p>
-<p>Accounts9是清华大学计算机系学生科协网络部创建的一个用户管理系统，提供层次用户管理功能以及OAuth2.0认证接口。</p>
-<p>本系统基于Node.js、MongoDB、OpenLDAP技术构建。</p>
-<p>作者
-  <a href="/u/byvoid">BYVoid</a>
-  <a href="/u/wyverald">Wyverald</a>
-  <a href="/u/nuk">Nuk</a>
-  <a href="/u/npbool">Npbool</a>
-  <a href="/u/liyuliang001">Liyuliang001</a>
-  <a href="/u/brian14708">Brian14708</a>
-</p>
+<p>欢迎各位用户来到Accounts9。</p>
+<p>Accounts9是清华大学计算机系学生科协网络部创建的一个用户管理系统，提供层次用户管理功能以及OAuth2.0认证接口。Accounts9还是一个整合的通讯录。</p>
+<p>本系统基于Node.js搭建，使用到了express、ejs、mongoose、less、continuation.js等开源模块。</p>
+<p>开发者</p>
+<ul>
+  <li><a href="/u/byvoid">BYVoid</a>
+  <li><a href="/u/wyverald">Wyverald</a>
+  <li><a href="/u/nuk">Nuk</a>
+  <li><a href="/u/npbool">Npbool</a>
+  <li><a href="/u/liyuliang001">Liyuliang001</a>
+  <li><a href="/u/brian14708">Brian</a>
+  <li><a href="/u/ray0">Ray</a>
+</li>
