--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
               <div><input type="submit" name="submit" id="home-input-submit" value="登入"></div>
           </form>
         <% } %>
-        <div id="home-footer"><a href="/about">THU.DCST.SAST.NET</a> 2012</div>
+        <div id="home-footer"><a href="/about">THU.DCST.SAST.NET</a> 2012-2013</div>
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
