--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -46,7 +46,7 @@
           <% } %>
           <%- body %>
         </div>
-        <div id="footer"><a href="/about">THU.DCST.SAST.NET</a> 2012</div>
+        <div id="footer"><a href="/about">THU.DCST.SAST.NET</a> 2012-2013</div>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
