Implement user edit by root admin

--- a/views/user/userlist.ejs
+++ b/views/user/userlist.ejs
@@ -32,6 +32,9 @@
           <a href="/group/<%= group.name %>/deluser/<%= user.name %>" class="btn btn-danger">
             <i class="icon-trash"></i>
           </a>
+          <a href="/editinfo/<%= user.name %>" class="btn btn">
+            <i class="icon-edit"></i>
+          </a>
         </td>
       <% } %>
       <% if (showBelong) { %>
