Display uid on personal page

--- a/views/user/userinfo.ejs
+++ b/views/user/userinfo.ejs
@@ -1,4 +1,8 @@
 <table>
+  <tr>
+    <th>Accounts9 ID</th>
+    <td><%= user.uid %></td>
+  </tr>
   <% if (user.nickname) { %>
     <tr>
       <th><%= msg('Nickname') %></th>
